# f1_fantasy_optimizer

./: README.md  pyproject.toml  requirements.txt
data/: current_team.json
f1fantasy/: debug_checks.py  ergast.py  fantasy_api.py  fantasy_prices.py  model.py  optimize.py  print_roster_ids.py  recommend.py  transfers.py  update_cache.py
f1fantasy/data/: current_team.example.json
tests/: test_smoke.py
